--- a/app/src/main/res/layout/stats.xml
+++ b/app/src/main/res/layout/stats.xml
@@ -107,6 +107,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="38dp"
         android:textSize="30sp"
+        android:textColor="#000"
         android:maxWidth="350dp"
         android:maxLines="2" />
 </RelativeLayout>
