--- a/app/src/main/res/layout/distance_fragment.xml
+++ b/app/src/main/res/layout/distance_fragment.xml
@@ -10,14 +10,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:background="@color/background_floating_material_light"
-        android:nestedScrollingEnabled="false" />
+        android:background="@color/background_floating_material_light" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="  Captured Flags  "
-        android:background="@color/accent_material_dark"
+        android:background="@color/button_material_dark"
         android:id="@+id/button_flag"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
@@ -27,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="         distance           "
-        android:background="@color/button_material_dark"
+        android:background="@color/accent_material_dark"
         android:id="@+id/button_dist"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
