--- a/app/src/main/res/layout/setting.xml
+++ b/app/src/main/res/layout/setting.xml
@@ -19,7 +19,7 @@
         android:text="Tutorial"
         android:shadowColor="@color/accent_material_light"
         android:layout_marginBottom="140dp"
-        android:id="@+id/button"
+        android:id="@+id/button_dist"
         android:layout_above="@+id/button3"
         android:layout_centerHorizontal="true"
         android:textSize="25dp" />
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:text="Link Facebook"
         android:id="@+id/button2"
-        android:layout_alignTop="@+id/button"
+        android:layout_alignTop="@+id/button_dist"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="80dp"
         android:textSize="25dp" />
