--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,20 +4,20 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_flist"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Friends List" />
+            android:icon="@drawable/ic_friends"
+            android:title="@string/friends_list" />
         <item
             android:id="@+id/nav_stats"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Statistics" />
+            android:icon="@drawable/ic_statistics"
+            android:title="@string/statistics" />
         <item
             android:id="@+id/nav_leader"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Leaderboards" />
+            android:icon="@drawable/ic_leaderboards"
+            android:title="@string/leaderboards" />
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Settings" />
+            android:title="@string/action_settings" />
     </group>
 
 </menu>
