--- a/app/src/main/res/layout/activity_join_group.xml
+++ b/app/src/main/res/layout/activity_join_group.xml
@@ -31,9 +31,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/listViewTwo"
-        android:layout_above="@+id/cancel"
+        android:drawSelectorOnTop="false"
+        android:layout_below="@+id/memberList"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="21dp" />
+        android:layout_marginTop="32dp"
+        android:paddingBottom="-32dp"/>
 
     <TextView
         android:layout_width="wrap_content"
