--- a/app/src/main/res/layout/setting.xml
+++ b/app/src/main/res/layout/setting.xml
@@ -40,10 +40,9 @@
         android:layout_height="wrap_content"
         android:text="Logout"
         android:id="@+id/button3"
+        android:textSize="25dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:textSize="25dp" />
+        android:layout_alignParentStart="true" />
 
 
 </RelativeLayout>
