--- a/app/src/main/res/layout/friends.xml
+++ b/app/src/main/res/layout/friends.xml
@@ -6,6 +6,14 @@
     android:orientation="vertical"
     android:scrollbars="vertical">
 
+    <TextView
+        android:id="@+id/empty_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:visibility="gone"
+        android:text="@string/no_friends"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/friend_rv"
         android:layout_width="match_parent"
@@ -13,6 +21,8 @@
         android:scrollbars="vertical">
 
     </android.support.v7.widget.RecyclerView>
+
+
 
 </LinearLayout>
 
